--- a/index.html
+++ b/index.html
@@ -48,34 +48,34 @@
     /* 👉 Task 7- Target the id headerBottom.
     Give it a bottom border of 1 pixel, solid gray, and a little bit of padding using px or rem units. */
     #headerBottom {
-      border-bottom-width: 10px;
-      border-bottom: 10px solid;
-      border-bottom-color: orange;
-      padding: 1.5rem;
-      border: 10px;
-      background-color: aqua;
+      border-bottom: 1px solid gray;
+      padding: 0.5rem;
     }
     /* 👉 Task 8- Target the divs that are nested directly inside the element with id headerBottom.
     Make them display as inline block, instead of block.
     This will cause them to render on the same line.
     You can consolidate this rule with the one on step. 4 */
 
+
     /* 👉 Task 9- Target the "Compose" button, although note it's a div instead an actual button.
     Give it color, bold text, background, padding, border radius, margin right, and a cursor of pointer. */
-    #compose {
-      color:blueviolet;
+    .blue-btn {
+      color: white;
       font-weight: bold;
-      background-color: antiquewhite;
-      padding: 1.5rem;
-      border-radius: 10%;
-      margin-right: 10px;
+      background-color: #176bad;
+      padding: 0.4rem;
+      border-radius: 4px;
+      margin-right: 1rem;
       cursor: pointer;
     }
     /* 👉 Task 10- Research how to remove all the default styling of button elements.
     Target the button elements inside the element with id headerBottom.
     Remove all their styling, give them a bit of margin to the right, and a cursor of pointer. */
     #headerBottom button {
-      margin-right: 10px;
+      padding: 0;
+      border: none;
+      background: none;
+      margin-right: 1rem;
       cursor: pointer;
     }
     /* 👉 Task 11- Target the button element inside the id headerBottom that has a class of active
@@ -84,8 +84,7 @@
     #headerBottom button.active {
       font-weight: bolder;
       border-bottom: 2px solid;
-      border-bottom-color: crimson;
-      background-color: blanchedalmond;
+      border-bottom-color: #176bad;
     }
     /* 👉 Task 12- Target all divs directly nested inside elements with a class of email,
     and make them display as inline-block elements.
@@ -96,24 +95,26 @@
     /* 👉 Task 13- Target the elements with a class of email.
     Give them some padding, bigger padding to the left, and a bottom border of very light grey. */
     .email {
-      padding: 10px;
-      padding-left: 25px;
-      border-bottom: lightgray;
-      border-bottom-width: 10px solid;
+      padding: 0.4rem;
+      padding-left: 0.8rem;
+      border-bottom: 1px solid #c5c5c5;
     }
     /* 👉 Task 14- Target each div inside the element with a class of email.
     Make the email author and the email subject take 35% of the width of the parent element.
     Make the check, the date and the size take up 8% of the width of the parent element.
     This will arrange the details in visible columns. */
-    .email div .email-name, .email div .email-subject {
+    .email-name,
+    .email-subject {
       width: 35%;
     }
-    .email div .email-date, .email div .email-check, .email div .email-size {
+    .email-check, 
+    .email-date,
+    .email-size {
       width: 8%;
     }
     /* 👉 Task 15- Target the second email and have its font weight be bold.
     This will make it look "unread". */
-    .email:first-of-type(2) {
+    .email:nth-child(2) {
       font-weight: bold;
     }
 
@@ -143,7 +144,7 @@
         </div>
       </div>
       <div id="headerBottom" class="inline-container">
-        <div id="compose">Compose</div>
+        <div class="blue-btn">Compose</div>
         <div>
           <button class="active">All mail</button>
           <button>Unread</button>
